fixed image on mobile view

--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -115,10 +115,18 @@
     flex-direction: column;
   }
 
+.card-image {
+  width: auto;
+  height: auto;
+  margin: 2rem;
+  border-radius: 8px;
+}
+
   .card-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
   }
 }
 
